[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Email Triage OpenEnv Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2",
    "openai",
    "openenv-core",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
client = ["httpx", "pydantic>=2"]
